--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apexcharts": "^3.26.0",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
